[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/carrack.png" type="Texture" id=1]
[ext_resource path="res://Assets/Materials/ship.material" type="Material" id=2]
[ext_resource path="res://Assets/Scripts/Ship.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/carrack_no_rigging.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/carrack_sails_open.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/carrack_sails_closed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/carrack_rigging.png" type="Texture" id=7]

[node name="Ship" type="Node2D"]
material = ExtResource( 2 )
script = ExtResource( 3 )
tilt_speed = 1.5

[node name="Carrack" type="TextureRect" parent="."]
use_parent_material = true
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrackNoRigging" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrackRigging" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrackSailsFurled" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarrackSailsUnfurled" type="TextureRect" parent="."]
visible = false
use_parent_material = true
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
